# trackers-compare

./: .gitignore  CMakeLists.txt  TrackerComparator.cpp  TrackerComparator.hpp  dependencies.sh  evaluator.cpp  main.cpp  readme.md  requirements.txt  tracker_compare.cpp  tracker_test.cpp
config/: config.yaml  general.yaml
evaluation/: CMakeLists.txt  SequenceTrackingSummary.cpp  TrackerPerformanceEvaluator.cpp
evaluation/include/: SequenceTrackingSummary.hpp  TrackerPerformanceEvaluator.hpp
python-utils/: annotations_convert.py  dataset_stats.py  plot_results.py  summary_table.py
tests/: CMakeLists.txt  test_dataset_infos_loader.cpp  test_dataset_utils.cpp
trackers/: CMakeLists.txt  CSRTTracker.cpp  DaSiamTracker.cpp  ITracker.cpp  ModVITTracker.cpp  TrackerModVIT.cpp  VITTracker.cpp
trackers/include/: CSRTTracker.hpp  DaSiamTracker.hpp  ITracker.hpp  ModVITTracker.hpp  TrackerModVIT.hpp  VITTracker.hpp
utils/: CMakeLists.txt  DatasetUtils.cpp
utils/include/: DatasetUtils.hpp  ImageSequenceReader.hpp  VideoFileReader.hpp  VideoReader.hpp
